--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             background-color: #333;
             color: #fff;
         }
+        .bink{
+        color: black;
+        }
     </style>
     <script>
         function showAlert() {
@@ -80,6 +83,12 @@
             <li>Traveling</li>
             <li>Coding</li>
             <li>School</li>
+        </ul>
+    </section>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <ul>
+            <li><a id="bink" href="./index.html">Dark page</a></li>
         </ul>
 
     </section>
