--- a/index.html
+++ b/index.html
@@ -1,111 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>ARSHIA`s Webpaage</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-        }
-
-        nav a {
-            color: #fff;
-            padding: 15px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-
-        nav a:hover {
-            background-color: #555;
-        }
-
-        section {
-            margin: 20px;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            background-color: #333;
-            color: #fff;
-        }
-        .bink{
-        color: black;
-        }
-    </style>
-    <script>
-        function showAlert() {
-            alert("Hello! This is an alert message.");
-        }
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>motivational poster</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to My Advanced Web Page</h1>
-    </header>
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#hobbies">My Hobbies</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello My name`s ARSHIA
-
-            <br>i`m just a new web developer and i`ll be the good developer<br>thank you for visiting
-        </p>
-    </section>
-    <section id="hobbies">
-        <h2>My Hobbies</h2>
-        <ul>
-            <li>Playing games</li>
-            <li>Traveling</li>
-            <li>Coding</li>
-            <li>School</li>
-        </ul>
-    </section>
-    <section id="projects">
-        <h2>My Projects</h2>
-        <ul>
-            <li><a id="bink" href="./index.html">Dark page</a></li>
-        </ul>
-
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <form>
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name"><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email"><br>
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message"></textarea><br>
-            <input type="submit" value="Submit">
-        </form>
-    </section>
-    <footer>
-        <h6>created by ARS0H1A</h6>
+    <img>
 </body>
+<div class="poster">
+    <img class="motivation-img" src="./AKS.jpg">
+    <h1>THAT SPECIAL PLACE </h1>
+    <p>when you find a amazing place in your town</p>
+</div>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!----
+1. The main h1 text should be using the Regular Libre Baskerville Font from Google Fonts:
+  https://fonts.google.com/specimen/Libre+Baskerville
+2. The text should be white and background black.
+3. Add your own image into the images folder inside assets. It should have a 5px white border.
+4. The text should be center aligned.
+5. Create a div to contain the h1, p and img elements. Adjust the margins so that the image and text are centered on the page. 
+  Hint: You horizontally center a div by giving it a width of 50% and a margin-left of 25%.
+  Hint: Set the image to have a width of 100% so it fills the div. 
+6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
+  https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
+-->
